maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:15: error: value droite is not a member of Unit
  prendBiscuit()droite()
                ^